api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  # This lines are comented because we will expose this service via Ingress object
  # type: NodePort
  selector:
    app: synergychat-api
  ports:
    - protocol:
      port: 80
      targetPort: 8080
      # nodePort: 30080
